--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "dev" : "firebase serve && webpack --watch && npx tailwindcss -i ./src/make.css -o ./public/dist/make.css --watch"
   },
   "author": "",
   "license": "ISC",
